@@ -232,7 +232,6 @@ final class BlobRequest {
      *             if the resource URI is invalid
      * @throws StorageException
      *             an exception representing any error which occurred during the operation.
-     * @throws IllegalArgumentException
      */
     public static HttpURLConnection appendBlock(final URI uri, final String source, long offset, Long length,
             final BlobRequestOptions blobOptions, String md5,
@@ -251,6 +250,7 @@ final class BlobRequest {
 
         if (accessCondition != null) {
             accessCondition.applyConditionToRequest(request);
+            accessCondition.applyAppendConditionToRequest(request);
         }
 
         addSourceRange(request, offset, length);
@@ -1664,6 +1664,70 @@ final class BlobRequest {
             accessCondition.applyConditionToRequest(request);
             accessCondition.applySequenceConditionToRequest(request);
         }
+
+        return request;
+    }
+
+    /**
+     * Constructs a HttpURLConnection to upload a page. Sign with page length for update, or 0 for clear.
+     *
+     * @param uri
+     *            A <code>java.net.URI</code> object that specifies the absolute URI.
+     * @param blobOptions
+     *            A {@link BlobRequestOptions} object that specifies execution options such as retry policy and timeout
+     *            settings for the operation. Specify <code>null</code> to use the request options specified on the
+     *            {@link CloudBlobClient}.
+     * @param opContext
+     *            An {@link OperationContext} object that represents the context for the current operation. This object
+     *            is used to track requests to the storage service, and to provide additional runtime information about
+     *            the operation.
+     * @param accessCondition
+     *            An {@link AccessCondition} object that represents the access conditions for the blob.
+     * @param pageRange
+     *            A {@link PageRange} object that represents the page range.
+     * @param sourceOffset
+     *           A <code>long</code> which represents the offset to use as the starting point for the source.
+     * @param sourceLength
+     *           A <code>Long</code> which represents the number of bytes to copy or <code>null</code> to copy until the
+     *           end of the blob.
+     * @param md5
+     *           A <code>String</code> which represents the MD5 caluclated for the range of bytes of the source.
+     * @return a HttpURLConnection to use to perform the operation.
+     * @throws IOException
+     *             if there is an error opening the connection
+     * @throws URISyntaxException
+     *             if the resource URI is invalid
+     * @throws StorageException
+     *             an exception representing any error which occurred during the operation.
+     */
+    public static HttpURLConnection putPage(final URI uri, String source, final BlobRequestOptions blobOptions,
+            final OperationContext opContext, final AccessCondition accessCondition, final PageRange pageRange,
+            final Long sourceOffset, final Long sourceLength, String md5) throws IOException, URISyntaxException,
+            StorageException {
+        final UriQueryBuilder builder = new UriQueryBuilder();
+        builder.add(Constants.QueryConstants.COMPONENT, PAGE_QUERY_ELEMENT_NAME);
+
+        final HttpURLConnection request = createURLConnection(uri, builder, blobOptions, opContext);
+
+        request.setDoOutput(true);
+        request.setRequestMethod(Constants.HTTP_PUT);
+
+        request.setFixedLengthStreamingMode(0);
+        request.setRequestProperty(Constants.HeaderConstants.CONTENT_LENGTH, "0");
+        request.setRequestProperty(Constants.HeaderConstants.COPY_SOURCE_HEADER, source);
+
+        // Page write is either update or clean; required
+        request.setRequestProperty(BlobConstants.PAGE_WRITE, PageOperationType.UPDATE.toString());
+        request.setRequestProperty(Constants.HeaderConstants.STORAGE_RANGE_HEADER, pageRange.toString());
+
+        if (accessCondition != null) {
+            accessCondition.applyConditionToRequest(request);
+            accessCondition.applySequenceConditionToRequest(request);
+        }
+
+        addSourceRange(request, sourceOffset, sourceLength);
+
+        BaseRequest.addOptionalHeader(request, HeaderConstants.SOURCE_CONTENT_MD5_HEADER, md5);
 
         return request;
     }
